--- a/veteran_suicides-checkpoint.ipynb
+++ b/veteran_suicides-checkpoint.ipynb
@@ -137,7 +137,7 @@
     "# Analyzing which state has high veteran suicide \n",
     "\n",
     "# three states (different from the above graph ) show high veteran suicide rate \n",
-    "# Around 18 countries show (35-45)% of suicidal rate\n"
+    "# Around 18 states show (35-45)% of suicidal rate\n"
    ]
   },
   {
